Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116233

Slices in surface graph do not update correctly when using ranges

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta4, 6.7.0 FF
    • 6.6
    • Graphs: 3D
    • None
    • c80e49aa9 (dev), 549ed0325 (6.6)

      To reproduce in widgetgraphgallery:

      • Go to surface graph
      • Select row or column slice and pick a point on the graph
      • Adjust ranges

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            spouke Sakaria Pouke
            spouke Sakaria Pouke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes