Fix slices when adjusting surfacegraph ranges

Fixes: QTBUG-116233
Change-Id: Ib60f9876b3b40efef3aabb3bc9188f8c788fde4e
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit c80e49aa92e15ec47e57f4808fedcad1b7356b73)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>